# cripto_lib

./: .clang-format  .gitignore  CMakeLists.txt  README.md  clean.sh  compile.sh  test.sh
mod/: mod.c  mod.h  test.c
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  algorithms.c  test.c
src/bmp/: CMakeLists.txt  bmp.c  test.c
src/include/algorithms/: algorithms.h
src/include/bmp/: bmp.h
src/include/mod_matrix/: mod_matrix.h  mod_matrix_macros.h
src/mod/: CMakeLists.txt  mod.c  test.c
src/mod_matrix/: CMakeLists.txt  mod_matrix.c  test.c
